--- a/filesystem.toml
+++ b/filesystem.toml
@@ -124,13 +124,13 @@ ptyd
 pcid /etc/pcid/filesystem.toml
 """
 
-[[files]]
-path = "/etc/init.d/10_net"
-data = """
-smolnetd
-dnsd
-dhcpd -b
-"""
+#[[files]]
+#path = "/etc/init.d/10_net"
+#data = """
+#smolnetd
+#dnsd
+#dhcpd -b
+#"""
 
 [[files]]
 path = "/etc/init.d/20_orbital"
