Reapply our filesystem.toml changes to config/desktop.toml

--- a/config/desktop.toml
+++ b/config/desktop.toml
@@ -158,6 +158,7 @@ uutils = {}
 #xz = {}
 zerod = {}
 #zlib = {}
+canary = {}
 
 # User settings
 [users.root]
@@ -183,13 +184,13 @@ ptyd
 pcid /etc/pcid/filesystem.toml
 """
 
-[[files]]
-path = "/etc/init.d/10_net"
-data = """
-smolnetd
-dnsd
-dhcpd -b
-"""
+#[[files]]
+#path = "/etc/init.d/10_net"
+#data = """
+#smolnetd
+#dnsd
+#dhcpd -b
+#"""
 
 [[files]]
 path = "/etc/init.d/20_orbital"
